# piri

./: .gitignore  Cargo.toml  README.en.md  README.md  config.example.toml
docs/en/plugins/: swallow.md  workspace_rule.md
docs/zh/plugins/: swallow.md  workspace_rule.md
src/: config.rs  daemon.rs  utils.rs
src/plugins/: mod.rs  scratchpads.rs  swallow.rs  window_rule.rs  window_utils.rs  workspace_rule.rs
