[package]
name = "piri"
version = "0.1.5"
edition = "2021"
authors = ["Starfall"]
description = "Extend niri compositor capabilities with extensible command system and plugins"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.40", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
notify = "6.1"
log = "0.4"
env_logger = "0.11"
shellexpand = "3.1"
libc = "0.2"
niri-ipc = "25.11"
async-trait = "0.1"
regex = "1.10"
futures = "0.3"

